--- a/zhiliao_core/src/main/res/layout/fragment_search.xml
+++ b/zhiliao_core/src/main/res/layout/fragment_search.xml
@@ -42,7 +42,9 @@
         android:paddingTop="8dp" />
 
 
-    <include layout="@layout/controlbar" />
+    <include
+        android:id="@+id/controlbar"
+        layout="@layout/controlbar" />
 
 
 </LinearLayout>
