--- a/app/src/main/res/layout/dialog_playqueue.xml
+++ b/app/src/main/res/layout/dialog_playqueue.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_sheet"
@@ -27,7 +27,7 @@
             android:layout_height="24dp"
             android:layout_margin="@dimen/dp_16"
             android:contentDescription="@null"
-            android:src="@drawable/ic_repeat_one"
+            android:src="@drawable/ic_repeat"
             android:tint="@color/white" />
 
         <TextView
@@ -35,11 +35,11 @@
             style="@style/TextAppearance.AppCompat.Body2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:textSize="@dimen/sp_16"
             app:layout_constraintStart_toEndOf="@+id/iv_play_mode"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="单曲循环"
-            android:textColor="@color/white"/>
+            tools:text="顺序播放" />
 
 
         <TextView
@@ -48,10 +48,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:textSize="@dimen/sp_16"
             app:layout_constraintStart_toEndOf="@+id/iv_play_mode"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textColor="@color/white"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/iv_clear_all"
@@ -73,15 +73,45 @@
         app:layout_constraintTop_toBottomOf="@+id/song_list_control_layout" />
 
     <!--app:layout_behavior="@string/bottom_sheet_behavior"-->
+    <!--android:minHeight="@dimen/dp_200"-->
+    <!--android:layout_weight="1"-->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcv_songs"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:minHeight="@dimen/dp_200"
+        app:layout_behavior="@string/bottom_sheet_behavior"
+        app:layout_constraintBottom_toTopOf="@+id/divider1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/divider" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:id="@+id/divider1"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/dp_05"
+        android:background="#80FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/tv_close"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rcv_songs" />
+
+    <TextView
+        android:id="@+id/tv_close"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/close"
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp_15"
+        app:layout_constraintBaseline_toBaselineOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider1"
+        app:layout_constraintVertical_bias="1.0" />
+
+</LinearLayout>
 
