--- a/zhiliao_core/src/main/res/drawable-xxxhdpi/bg_bottom_popup_container.xml
+++ b/zhiliao_core/src/main/res/drawable-xxxhdpi/bg_bottom_popup_container.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/toolbar" />
+            <solid android:color="@color/queue_dialog" />
             <corners android:topLeftRadius="@dimen/dp_16" android:topRightRadius="@dimen/dp_16" />
         </shape>
     </item>
