已调整项目结构，在设计歌单功能前保留副本

--- a/app/src/main/res/layout/fragment_detail_cover.xml
+++ b/app/src/main/res/layout/fragment_detail_cover.xml
@@ -76,7 +76,7 @@
             android:layout_marginEnd="30dp"
             android:layout_marginRight="30dp"
             android:elevation="10dp"
-            android:src="@drawable/default_cover"
+            android:src="@drawable/diskte"
             app:civ_border_color="@color/white" />
 
         <de.hdodenhof.circleimageview.CircleImageView
