--- a/app/src/main/res/layout/item_music.xml
+++ b/app/src/main/res/layout/item_music.xml
@@ -11,12 +11,12 @@
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/dp_10"
         android:ellipsize="end"
         android:lines="1"
         android:text="@string/music"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="@dimen/sp_16"
         app:layout_constraintBottom_toTopOf="@+id/tv_artist"
         app:layout_constraintEnd_toStartOf="@+id/iv_video"
         app:layout_constraintHorizontal_bias="0.0"
@@ -28,14 +28,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="@dimen/dp_10"
         android:drawablePadding="2dp"
         android:ellipsize="end"
         android:gravity="center|start"
         android:lines="1"
         android:text="@string/artist_tips"
         android:textColor="@color/grey"
-        android:textSize="14sp"
+        android:textSize="@dimen/sp_12"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/iv_video"
         app:layout_constraintStart_toStartOf="@+id/tv_title"
