--- a/app/src/main/res/layout/dialog_playqueue.xml
+++ b/app/src/main/res/layout/dialog_playqueue.xml
@@ -21,26 +21,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/iv_play_mode"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_margin="@dimen/dp_16"
-            android:contentDescription="@null"
-            android:src="@drawable/ic_repeat"
-            android:tint="@color/white" />
-
-        <TextView
-            android:id="@+id/tv_play_mode"
-            style="@style/TextAppearance.AppCompat.Body2"
+        <LinearLayout
+            android:id="@+id/ll_mode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="@dimen/sp_16"
-            app:layout_constraintStart_toEndOf="@+id/iv_play_mode"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="顺序播放" />
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
 
+            <ImageView
+                android:id="@+id/iv_play_mode"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_margin="@dimen/dp_16"
+                android:contentDescription="@null"
+                android:src="@drawable/ic_repeat"
+                android:tint="@color/white" />
+
+            <TextView
+                android:id="@+id/tv_play_mode"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp_16"
+                app:layout_constraintStart_toEndOf="@+id/iv_play_mode"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="顺序播放" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_song_sum"
@@ -81,6 +88,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:minHeight="@dimen/dp_200"
+        android:overScrollMode="never"
         app:layout_behavior="@string/bottom_sheet_behavior"
         app:layout_constraintBottom_toTopOf="@+id/divider1"
         app:layout_constraintEnd_toEndOf="parent"
