--- a/app/src/main/res/layout/item_queue.xml
+++ b/app/src/main/res/layout/item_queue.xml
@@ -67,13 +67,13 @@
         android:textColor="@color/white"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/iv_more"
+        app:layout_constraintEnd_toStartOf="@id/iv_delete"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/tv_artist"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/iv_more"
+        android:id="@+id/iv_delete"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
