--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="progress_start">#ffffff</color>
     <color name="progress_end">#80ffffff</color>
+    <color name="dialog_more_background">#171919</color>
+    <color name="button_red">#F23E56</color>
+
 </resources>
