给QQMusic、NeteaseMusicApi提供接口，统一处理沉浸状态栏，开启边听边缓存

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="progress_end">#80ffffff</color>
     <color name="dialog_more_background">#171919</color>
     <color name="button_red">#F23E56</color>
+    <color name="app_green">#05b962</color>
 
 </resources>
