--- a/app/src/main/res/layout/fragment_music_hall.xml
+++ b/app/src/main/res/layout/fragment_music_hall.xml
@@ -4,7 +4,7 @@
     android:id="@+id/swipe_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/toolbar"
+    android:background="?attr/toolbar_color"
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
