--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="dp_70">70dp</dimen>
     <dimen name="dp_12">12dp</dimen>
+    <dimen name="dp_80">80dp</dimen>
 </resources>
