--- a/app/src/main/res/layout/item_rv_recommendsonglist.xml
+++ b/app/src/main/res/layout/item_rv_recommendsonglist.xml
@@ -4,7 +4,10 @@
     android:layout_width="@dimen/dp_100"
     android:layout_height="wrap_content"
     android:layout_margin="2dp"
-    android:orientation="vertical">
+    android:background="@android:color/transparent"
+    android:orientation="vertical"
+    tools:background="@color/toolbar">
+
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_cover"
@@ -12,6 +15,30 @@
         android:layout_height="@dimen/dp_100"
         android:scaleType="centerInside"
         android:src="@drawable/cover_00004" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_margin="@dimen/dp_3"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/ic_small_play" />
+
+        <TextView
+            android:id="@+id/tv_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/dp_2"
+            android:textColor="@color/white"
+            android:textSize="8sp"
+            tools:text="1亿" />
+    </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_name"
