--- a/app/src/main/res/layout/item_text.xml
+++ b/app/src/main/res/layout/item_text.xml
@@ -15,6 +15,7 @@
         android:paddingRight="@dimen/dp_10">
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="你的歌单"
