重构中，onLoadMore功能仍需完善

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -105,7 +105,7 @@
             android:lines="1"
             android:paddingStart="@dimen/dp_10"
             android:paddingLeft="@dimen/dp_10"
-            android:textColor="#979797"
+            android:textColor="@color/login_textcolor"
             tools:text="20211@163.com" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -133,7 +133,7 @@
             android:lines="1"
             android:paddingStart="@dimen/dp_10"
             android:paddingLeft="@dimen/dp_10"
-            android:textColor="#979797"
+            android:textColor="@color/login_textcolor"
             tools:text="11675" />
 
     </com.google.android.material.textfield.TextInputLayout>
