--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="dialog_more_background">#171919</color>
     <color name="button_red">#F23E56</color>
     <color name="app_green">#05b962</color>
+    <color name="login_textcolor">#979797</color>
 
 </resources>
